--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -56,42 +56,53 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8" style="padding-bottom: 0; margin-bottom: 0">
+      {% if district_name %}
+        <span class="glyphicon glyphicon-globe"></span> <a href="/events/{{district_abbrev}}/{{event.year}}">{{district_name}} District</a> Event<br />
+      {% endif %}
+      {% if parent_event %}
+        <span class="glyphicon glyphicon-circle-arrow-right"></span> Winners advance to the <a href="/event/{{ parent_event.key_name }}">{{ parent_event.name }}</a><br />
+      {% endif %}
+      {{ em.showEventDates(event) }}
+      {% if event.nl and event.nl.name and event.nl.city_state_country %}
+        <br><span class="glyphicon glyphicon-map-marker"></span>
+        <span itemprop="location">
+        {% if event.nl and event.nl.name %}
+          <a href="{{event.nl.place_details.url}}" target="_blank">{{event.nl.name}}</a> in {{event.nl.city_state_country}}
+        {% else %}
+          <a href="//maps.google.com/maps?q={{ event.city_state_country|urlencode }}" target="_blank">{{event.city_state_country}}</a>
+        {% endif %}
+        </span>
+      {% elif event.location or event.venue_address_safe %}
+        <br><span class="glyphicon glyphicon-map-marker"></span>
+        <span itemprop="location">
+        {% if event.venue_address_safe %}
+          <a href="http://maps.google.com/maps?q={{ event.venue_address_safe|urlencode }}" target="_blank">{{ event.venue_or_venue_from_address }}</a>{% if event.location %} in {{event.location}}{% endif %}
+        {% else %}
+          <a href="http://maps.google.com/maps?q={{ event.location|urlencode }}" target="_blank">{{event.location}}</a>
+        {% endif %}
+        </span>
+      {% endif %}
+      {% if event.facebook_eid %}<br><span class="glyphicon glyphicon-thumbs-up"></span> <a href="{{ event.facebook_event_url }}" title="Facebook Event" target="_blank">RSVP on Facebook</a><br>{% endif %}
+    </div>
+    <div class="col-sm-4" style="padding-bottom: 0; margin-bottom: 0">
       <a class="btn btn-success pull-right hidden-xs" href="/suggest/event/video?event_key={{event.key_name}}" target="_blank"><span class="glyphicon glyphicon-plus"></span> Add Match Videos!</a>
-      <p>
-        {% if district_name %}
-          <span class="glyphicon glyphicon-globe"></span> <a href="/events/{{district_abbrev}}/{{event.year}}">{{district_name}} District</a> Event<br />
-        {% endif %}
-        {% if parent_event %}
-          <span class="glyphicon glyphicon-circle-arrow-right"></span> Winners advance to the <a href="/event/{{ parent_event.key_name }}">{{ parent_event.name }}</a><br />
-        {% endif %}
-        {{ em.showEventDates(event) }}
-        {% if event.nl and event.nl.name and event.nl.city_state_country %}
-          <br><span class="glyphicon glyphicon-map-marker"></span>
-          <span itemprop="location">
-          {% if event.nl and event.nl.name %}
-            <a href="{{event.nl.place_details.url}}" target="_blank">{{event.nl.name}}</a> in {{event.nl.city_state_country}}
-          {% else %}
-            <a href="//maps.google.com/maps?q={{ event.city_state_country|urlencode }}" target="_blank">{{event.city_state_country}}</a>
-          {% endif %}
-          </span>
-        {% elif event.location or event.venue_address_safe %}
-          <br><span class="glyphicon glyphicon-map-marker"></span>
-          <span itemprop="location">
-          {% if event.venue_address_safe %}
-            <a href="http://maps.google.com/maps?q={{ event.venue_address_safe|urlencode }}" target="_blank">{{ event.venue_or_venue_from_address }}</a>{% if event.location %} in {{event.location}}{% endif %}
-          {% else %}
-            <a href="http://maps.google.com/maps?q={{ event.location|urlencode }}" target="_blank">{{event.location}}</a>
-          {% endif %}
-          </span>
-        {% endif %}
-        {% if event.website %}<br><span class="glyphicon glyphicon-link"></span> <a href="{{ event.website }}" title="{{ event.name }}" target="_blank">{{ event.website }}</a>{% endif %}
-        {% if event.first_eid or event.official %}{% if not event.website %}<br><span class="glyphicon glyphicon-info-sign"></span>{% else %} - {% endif %} details on <a href="{% if event.first_eid %}https://www.firstinspires.org/team-event-search/event?id={{event.first_eid}}{%elif event.official %}https://frc-events.firstinspires.org/{{event.year}}/{{event.first_api_code}}{%endif%}" target="_blank">firstinspires.org</a>{% endif %}
-        {% if event.facebook_eid %}<br><span class="glyphicon glyphicon-thumbs-up"></span> <a href="{{ event.facebook_event_url }}" title="Facebook Event" target="_blank">RSVP on Facebook</a><br>{% endif %}
-        {% if event.official and event.year >= 2006 %}<br><span class="glyphicon glyphicon-info-sign"></span> Data provided by the <a href="https://frc-events.firstinspires.org/services/API" target="_blank">FIRST Events API</a>{% endif %}
-      </p>
     </div>
   </div>
+  <div class="row">
+      <div class="col-sm-7" style="padding-top: 0; margin-top: 0">
+        {% if event.website %}<span class="glyphicon glyphicon-link"></span> <a href="{{ event.website }}" title="{{ event.name }}" target="_blank">{{ event.website }}</a>{% endif %}
+        {% if event.first_eid or event.official %}{% if not event.website %}<span class="glyphicon glyphicon-info-sign"></span>{% else %} - {% endif %} Details on <a href="{% if event.first_eid %}https://www.firstinspires.org/team-event-search/event?id={{event.first_eid}}{%elif event.official %}https://frc-events.firstinspires.org/{{event.year}}/{{event.first_api_code}}{%endif%}" target="_blank">firstinspires.org</a>{% endif %}
+      </div>
+      <div class="col-sm-5" style="padding-top: 0; margin-top: 0">
+        {% if event.official and event.year >= 2006 %}
+          <div class="pull-right-not-xs">
+            <span class="glyphicon glyphicon-info-sign"></span> Data provided by the <a href="https://frc-events.firstinspires.org/services/API" target="_blank">FIRST Events API</a>
+          </div>
+        {% endif %}
+      </div>
+  </div>
+  <br>
 
   <div class="row">
     <div class="col-sm-12">
