Fix team page attribution position

--- a/src/backend/web/templates/base.html
+++ b/src/backend/web/templates/base.html
@@ -112,7 +112,7 @@
 {% block footer %}
 <div id="footer" class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="row col-sm-12">
       <hr>
       {% block footer_content %}{% endblock %}
     </div>
