--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -450,7 +450,7 @@
 
 {% block footer_content %}
 {% if event.official and event.year >= 2006 %}
-<div class="text-left" style="margin: 2rem 0;">
+<div class="text-left col-xs-12" style="margin-bottom: 2rem;">
   <span class="glyphicon glyphicon-info-sign"></span> Data provided by the <a href="https://frc-events.firstinspires.org/services/API" target="_blank"><em>FIRST</em><sup>®</sup> Events API</a>
 </div>
 {% endif %}
