--- a/src/backend/web/templates/index/index_kickoff.html
+++ b/src/backend/web/templates/index/index_kickoff.html
@@ -44,10 +44,10 @@
         <!--<span class="glyphicon glyphicon-globe"></span> <a href="http://www.firstinspires.org/2018-frc-teaser" target="_blank" title="FIRST Kickoff Page"><em>FIRST</em> Kickoff Page</a><br> -->
         <!-- <a class="hashtag-link hashtag-cd" href="https://www.chiefdelphi.com/forums/showthread.php?threadid=138575" target="_blank" title="Chief Delphi Discussion Thread">Chief Delphi Game Hint Thread</a><br> -->
         <!--<span class="glyphicon glyphicon-info-sign"></span> <a href="#" target="_blank">Download {{kickoff_datetime_est|strftime("%Y")}} Game Manual</a><br />-->
-        <!--<br>
+        <br>
         <div class="fitvids">
           <iframe width="420" height="315" src="https://www.youtube.com/embed/{{game_teaser_youtube_id}}" frameborder="0" allowfullscreen></iframe>
-        </div>-->
+        </div>
       </div>
     </div>
     <!-- <div class="col-sm-4">
