--- a/src/backend/tasks_io/templates/datafeeds/usfirst_team_details_get.html
+++ b/src/backend/tasks_io/templates/datafeeds/usfirst_team_details_get.html
@@ -1,18 +1,9 @@
-{% extends "base.html" %}
-
-{% block title %}UsfirstTeamDetailsGet{% endblock %}
-
-{% block content %}
-<div class="row">
+<div>
     {% if success %}
-    <div class="alert alert-block alert-success">
+    <div>
         <h4>Got team {{team.team_number}}</h4>
     </div>
     <h2>Team {{team.team_number}}</h2>
-    <div class="btn-group">
-        <a href="/team/{{team.team_number}}" class="btn btn-primary" /><span class="glyphicon glyphicon-eye-open"></span> View on TBA</a>
-        <a href="/admin/team/{{team.team_number}}" class="btn" /><span class="glyphicon glyphicon-edit"></span> View in Admin</a>
-    </div>
     <ul>
         <li>Name: {{team.name}}</li>
         <li>Nickname: {{team.nickname}}</li>
@@ -23,12 +14,12 @@
         <li>Country: {{team.country}}</li>
         <li>Website: {{team.website}}</li>
         <li>Robot: {{robot}}</li>
+        <li>DistrictTeam: {{district_team}}</li>
     </ul>
     {% else %}
-    <div class="alert alert-block alert-danger">
+    <div>
         <h4>Team Fetch failed.</h4>
         <p>{{key_name}} may lack a TPID, thus don't know how to scrape FIRST</p>
     </div>
     {% endif %}
 </div>
-{% endblock %}
