--- a/src/backend/tasks_io/templates/datafeeds/usfirst_event_alliances_get.html
+++ b/src/backend/tasks_io/templates/datafeeds/usfirst_event_alliances_get.html
@@ -1,8 +1,3 @@
-{% extends "base.html" %}
-
-{% block title %}UsfirstEventAlliancesGet{% endblock %}
-
-{% block content %}
 <div class="row">
     <div class="alert alert-block alert-success">
         <h4>Got Alliances for {{event_name}}</h4>
@@ -10,7 +5,7 @@
     <table class="table table-striped table-hover">
     {% for alliance in alliance_selections %}
         <tr>
-            <td>{{forloop.counter}}</td>
+            <td>{{loop.index}}</td>
             {% for team in alliance.picks %}
                 <td>{{team}}</td>
             {% endfor %}
@@ -18,4 +13,3 @@
     {% endfor %}
     </table>
 </div>
-{% endblock %}
